implementation of de, aggregation, disaggregation